--- a/externals/DataMap/src/DM_MapDialog.ui
+++ b/externals/DataMap/src/DM_MapDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>837</width>
-    <height>549</height>
+    <width>1295</width>
+    <height>799</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -236,7 +236,7 @@
     </spacer>
    </item>
    <item row="0" column="0" rowspan="3">
-    <widget class="DM::GraphicsView" name="graphicsViewMap">
+    <widget class="QGraphicsView" name="graphicsViewMap">
      <property name="sizeAdjustPolicy">
       <enum>QAbstractScrollArea::AdjustToContents</enum>
      </property>
@@ -255,11 +255,6 @@
    <slots>
     <signal>editingFinishedSuccessfully()</signal>
    </slots>
-  </customwidget>
-  <customwidget>
-   <class>DM::GraphicsView</class>
-   <extends>QGraphicsView</extends>
-   <header>DM_GraphicsView.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
