Updated weather data converter

--- a/externals/DataMap/src/DM_MapDialog.ui
+++ b/externals/DataMap/src/DM_MapDialog.ui
@@ -25,7 +25,7 @@
         <item>
          <widget class="QCheckBox" name="checkBoxAirTemp">
           <property name="text">
-           <string>CheckBox</string>
+           <string>Air Temperature</string>
           </property>
           <property name="checked">
            <bool>true</bool>
@@ -35,7 +35,7 @@
         <item>
          <widget class="QCheckBox" name="checkBoxRadiation">
           <property name="text">
-           <string>CheckBox</string>
+           <string>Short-Wave Radiation</string>
           </property>
           <property name="checked">
            <bool>true</bool>
@@ -45,7 +45,7 @@
         <item>
          <widget class="QCheckBox" name="checkBoxPressure">
           <property name="text">
-           <string>CheckBox</string>
+           <string>Pressure</string>
           </property>
           <property name="checked">
            <bool>true</bool>
@@ -55,7 +55,7 @@
         <item>
          <widget class="QCheckBox" name="checkBoxWind">
           <property name="text">
-           <string>CheckBox</string>
+           <string>Wind</string>
           </property>
           <property name="checked">
            <bool>true</bool>
@@ -65,7 +65,7 @@
         <item>
          <widget class="QCheckBox" name="checkBoxPrecipitation">
           <property name="text">
-           <string>CheckBox</string>
+           <string>Precipitation</string>
           </property>
           <property name="checked">
            <bool>true</bool>
@@ -236,7 +236,7 @@
     </spacer>
    </item>
    <item row="0" column="0" rowspan="3">
-    <widget class="QGraphicsView" name="graphicsViewMap">
+    <widget class="DM::GraphicsView" name="graphicsViewMap">
      <property name="sizeAdjustPolicy">
       <enum>QAbstractScrollArea::AdjustToContents</enum>
      </property>
@@ -255,6 +255,11 @@
    <slots>
     <signal>editingFinishedSuccessfully()</signal>
    </slots>
+  </customwidget>
+  <customwidget>
+   <class>DM::GraphicsView</class>
+   <extends>QGraphicsView</extends>
+   <header>DM_GraphicsView.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
