--- a/ClimateDataGenerator/src/DWDMainWindow.ui
+++ b/ClimateDataGenerator/src/DWDMainWindow.ui
@@ -35,18 +35,35 @@
            <string>Working directory</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_4">
-           <item row="0" column="1">
-            <widget class="QLineEdit" name="lineEditFile"/>
-           </item>
-           <item row="0" column="0">
+           <item row="1" column="0">
             <widget class="QLabel" name="label_9">
              <property name="text">
-              <string>Path</string>
+              <string>Export Path:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QToolButton" name="toolButtonOpenDirectory">
+             <property name="text">
+              <string>...</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLineEdit" name="lineEditFile"/>
+           </item>
+           <item row="0" column="1">
+            <widget class="QLineEdit" name="lineEditDownloads"/>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_11">
+             <property name="text">
+              <string>Downloads:</string>
              </property>
             </widget>
            </item>
            <item row="0" column="2">
-            <widget class="QToolButton" name="toolButtonOpenDirectory">
+            <widget class="QToolButton" name="toolButtonDownloadDir">
              <property name="text">
               <string>...</string>
              </property>
