Added guiState support for GroupBox of Download Directories

--- a/ClimateDataGenerator/src/DWDMainWindow.ui
+++ b/ClimateDataGenerator/src/DWDMainWindow.ui
@@ -30,7 +30,7 @@
       <widget class="QWidget" name="layoutWidget">
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
-         <widget class="QGroupBox" name="groupBox">
+         <widget class="QGroupBox" name="groupBoxDir">
           <property name="title">
            <string>Working directory</string>
           </property>
