--- a/ClimateDataGenerator/src/DWDMainWindow.ui
+++ b/ClimateDataGenerator/src/DWDMainWindow.ui
@@ -268,6 +268,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="pushButtonDownload">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>Generate Weather-File</string>
           </property>
