--- a/externals/DataMap/src/DM_MapDialog.ui
+++ b/externals/DataMap/src/DM_MapDialog.ui
@@ -101,7 +101,7 @@
            <widget class="QComboBox" name="comboBoxYear"/>
           </item>
           <item row="2" column="1">
-           <widget class="QLineEdit" name="lineEditLongitude"/>
+           <widget class="QtExt::ValidatingLineEdit" name="lineEditLongitude"/>
           </item>
           <item row="1" column="0">
            <widget class="QLabel" name="label">
@@ -111,7 +111,7 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLineEdit" name="lineEditLatitude"/>
+           <widget class="QtExt::ValidatingLineEdit" name="lineEditLatitude"/>
           </item>
           <item row="3" column="0">
            <widget class="QLabel" name="label_3">
