--- a/ClimateDataGenerator/src/DWDMainWindow.ui
+++ b/ClimateDataGenerator/src/DWDMainWindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>DWD Importer</string>
+   <string>DWD Weather Data Converter</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_5">
@@ -262,7 +262,7 @@
         <item>
          <widget class="QPushButton" name="pushButtonPreview">
           <property name="text">
-           <string>Download and preview Weather-Data</string>
+           <string>Download  Weather-Data</string>
           </property>
          </widget>
         </item>
@@ -272,7 +272,7 @@
            <bool>false</bool>
           </property>
           <property name="text">
-           <string>Generate Weather-File</string>
+           <string>Save Weather-Data as epw-File</string>
           </property>
          </widget>
         </item>
