--- a/DWDWeatherDataConverter/src/DWDMainWindow.ui
+++ b/DWDWeatherDataConverter/src/DWDMainWindow.ui
@@ -223,15 +223,15 @@
              </property>
             </widget>
            </item>
-           <item row="6" column="1" colspan="2">
-            <widget class="QPushButton" name="pushButtonMap">
-             <property name="text">
-              <string>pick Location on map</string>
-             </property>
-            </widget>
-           </item>
            <item row="1" column="1" colspan="2">
             <widget class="QLineEdit" name="lineEditNameFilter"/>
+           </item>
+           <item row="6" column="1" colspan="3">
+            <widget class="QPushButton" name="pushButtonMap">
+             <property name="text">
+              <string>pick location on map ...</string>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
